[gd_scene load_steps=16 format=3 uid="uid://ctwl2los5db6v"]

[ext_resource type="Script" path="res://Load Game Menu/Level_Select.gd" id="1_018vb"]
[ext_resource type="FontFile" uid="uid://b8cxcoj8owosp" path="res://Main Menu/ShareTechMono-Regular.tres" id="3_jsbjj"]

[sub_resource type="Gradient" id="Gradient_hsytu"]
offsets = PackedFloat32Array(0, 0.0519481, 1)
colors = PackedColorArray(1, 1, 1, 1, 0.968806, 0.954545, 1, 1, 0.313726, 0, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_6mpaf"]
gradient = SubResource("Gradient_hsytu")
fill_to = Vector2(1, 1)

[sub_resource type="FontVariation" id="FontVariation_oeqxk"]
base_font = ExtResource("3_jsbjj")

[sub_resource type="FontVariation" id="FontVariation_r4ncb"]
base_font = SubResource("FontVariation_oeqxk")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dp7a4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_byfml"]
bg_color = Color(0, 0, 1, 1)

[sub_resource type="FontVariation" id="FontVariation_fswpg"]
base_font = SubResource("FontVariation_oeqxk")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ifn4l"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hsvp8"]
bg_color = Color(0, 0, 1, 1)

[sub_resource type="FontVariation" id="FontVariation_6r5f8"]
base_font = ExtResource("3_jsbjj")

[sub_resource type="FontVariation" id="FontVariation_6g4hd"]
base_font = SubResource("FontVariation_6r5f8")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qfylh"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_51gi2"]
bg_color = Color(0, 0, 1, 1)

[node name="Level_Select2" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_018vb")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_6mpaf")

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect"]
layout_mode = 0
offset_left = 50.0
offset_top = 475.0
offset_right = 213.0
offset_bottom = 610.0

[node name="Creative" type="Button" parent="TextureRect/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
focus_neighbor_top = NodePath("../Multiplayer")
theme_override_colors/font_color = Color(0, 0, 1, 1)
theme_override_fonts/font = SubResource("FontVariation_r4ncb")
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxEmpty_dp7a4")
theme_override_styles/hover = SubResource("StyleBoxFlat_byfml")
text = "CREATIVE"

[node name="Story" type="Button" parent="TextureRect/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0, 0, 1, 1)
theme_override_fonts/font = SubResource("FontVariation_fswpg")
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxEmpty_ifn4l")
theme_override_styles/hover = SubResource("StyleBoxFlat_hsvp8")
text = "STORY
"

[node name="Multiplayer" type="Button" parent="TextureRect/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
focus_neighbor_bottom = NodePath("../Creative")
theme_override_colors/font_color = Color(0, 0, 1, 1)
theme_override_fonts/font = SubResource("FontVariation_6g4hd")
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxEmpty_qfylh")
theme_override_styles/hover = SubResource("StyleBoxFlat_51gi2")
text = "MULTIPLAYER"

[node name="Menu" type="Button" parent="TextureRect/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
focus_neighbor_bottom = NodePath("../Creative")
theme_override_colors/font_color = Color(0, 0, 1, 1)
theme_override_fonts/font = SubResource("FontVariation_6g4hd")
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxEmpty_qfylh")
theme_override_styles/hover = SubResource("StyleBoxFlat_51gi2")
text = "MAIN MENU"

[node name="select" type="Label" parent="TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -324.5
offset_top = -74.0
offset_right = 324.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 1, 1)
theme_override_colors/font_shadow_color = Color(0.996078, 0, 1, 1)
theme_override_fonts/font = ExtResource("3_jsbjj")
theme_override_font_sizes/font_size = 100
text = "SELECT MODE"

[connection signal="pressed" from="TextureRect/VBoxContainer/Creative" to="." method="_on_creative_pressed"]
[connection signal="pressed" from="TextureRect/VBoxContainer/Story" to="." method="_on_story_pressed"]
[connection signal="pressed" from="TextureRect/VBoxContainer/Menu" to="." method="_on_menu_pressed"]
